# repository_chatbot

./: README.md  scaffold_repo_qa.sh
repo-qa/: .gitignore  README.md  pyproject.toml  requirements.txt  upgrade_ast_chunking.sh
repo-qa/docs/: concepts.md  file_structure.md  requirements.md
repo-qa/sample_repo/auth/: login.py
repo-qa/sample_repo/db/: connection.py
repo-qa/sample_repo/utils/: logging.py
repo-qa/src/repo_qa/: cli.py  config.py
repo-qa/src/repo_qa/embeddings/: provider.py
repo-qa/src/repo_qa/generation/: answerer.py
repo-qa/src/repo_qa/ingestion/: chunker.py  loader.py
repo-qa/src/repo_qa/retrieval/: retriever.py
repo-qa/src/repo_qa/vectorstore/: chroma_store.py
repo-qa/tests/: test_ast_chunker.py  test_chroma_store.py  test_chunker.py  test_embeddings.py
